mysql/hardeningcnp-mysql-stig-v-235146-h80zk68.yaml
# https://www.stigviewer.com/stig/oracle_mysql_8.0/2021-12-10/finding/V-235146

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mysql-stig-v-235146-h80zk68
  namespace: explorer
spec:
  description: "Restrict access to unused ports"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mysql
      controller-revision-hash: mysql-fbf7c789
      helm.sh/chart: mysql-9.1.2
      statefulset.kubernetes.io/pod-name: mysql-0
      app.kubernetes.io/instance: mysql
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
